# dataextractortool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dataextractor/: __main__.py
src/dataextractor/cli/: __init__.py  handler.py
src/dataextractor/config/: __init__.py  env.py  settings.py
src/dataextractor/core/: app.py
src/dataextractor/core/entities/: __init__.py  project.py
src/dataextractor/core/interfaces/: __init__.py  repository.py
src/dataextractor/core/use_cases/: __init__.py  list_projects.py
src/dataextractor/infrastructure/gitlab/: __init__.py  repository.py
src/dataextractor/infrastructure/jira/: __init__.py  repository.py
tests/: test_cli_handler.py  test_env_config.py  test_gitlab_repository.py  test_list_projects_use_case.py  test_project_entity.py  test_settings.py
