[project]
name = "dataextractor"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuelDourado",email = "sd7038@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-gitlab (>=7.0.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-certifi-win32 (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "dataextractor", from = "src"}]

[project.scripts]
dataextractor = "dataextractor.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]

[tool.pylint.main]
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "C0301", # line-too-long
  "R0903", # too-few-public-methods
]
